homelab/templates/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  annotations:
    traefik.frontend.passHostHeader: "false"
spec:
  tls:
    - secretName: "le-cert"
    - hosts:
        - grafana.sethpyle.com
  rules:
    - host: grafana.sethpyle.com
      http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: grafana
                port:
                  number: 3000
